--- a/index.html
+++ b/index.html
@@ -51,6 +51,14 @@
         </div>
     </nav>
 
+        <div class="jumbotron">
+            <h1 class="display-4">Welome to SlipSafe</h1>
+            <p class="lead">Our aim is to get you from A to B, as safe as can be.</p>
+            <hr class="my-4">
+            <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
+            <p class="lead">
+                <a class="btn btn-primary btn-lg" href="#" role="button">Login</a>
+                <a class="btn btn- btn-sm" href="#" role="button">skip</a>
 
     <!---------------------------------------------->
     <!-- Your own JavaScript functions go here    -->
