--- a/index.html
+++ b/index.html
@@ -51,21 +51,33 @@
         </div>
     </nav>
 
-        <div class="jumbotron">
-            <h1 class="display-4">Welome to SlipSafe</h1>
-            <p class="lead">Our aim is to get you from A to B, as safe as can be.</p>
-            <hr class="my-4">
-            <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
-            <p class="lead">
-                <a class="btn btn-primary btn-lg" href="#" role="button">Login</a>
-                <a class="btn btn- btn-sm" href="#" role="button">skip</a>
+    <div class="jumbotron">
+        <h1 class="display-4">Welome to SlipSafe</h1>
+        <p class="lead">Our aim is to get you from A to B, as safe as can be.</p>
+        <hr class="my-4">
+        <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
+        <p class="lead">
+            <a class="btn btn-primary btn-lg" href="#" role="button">Login</a>
+            <a class="btn btn- btn-sm" href="#" role="button">skip</a>
 
-    <!---------------------------------------------->
-    <!-- Your own JavaScript functions go here    -->
-    <!---------------------------------------------->
+        <footer class="navbar justify-content-evenly bg-info fixed-bottom" style="width: 100%;">
+            <nav class="navbar bg-light">
+                <form class="container-fluid">
+                    <div class="input-group">
+                        <span class="btn btn-outline-success" id="basic-addon1">ICON</span>
+                        <input type="text" class="form-control" placeholder="Search" aria-label="Search"
+                            aria-describedby="basic-addon1">
+                    </div>
+                </form>
+            </nav>
+        </footer>
 
-    <!-- Link to scripts of your own -->
-    <!-- <script src="./scripts/script.js"></script> -->
+        <!---------------------------------------------->
+        <!-- Your own JavaScript functions go here    -->
+        <!---------------------------------------------->
+
+        <!-- Link to scripts of your own -->
+        <!-- <script src="./scripts/script.js"></script> -->
 
 </body>
 
