Change footer styling

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <a class="btn btn- btn-sm" href="#" role="button">skip</a>
 
         <footer class="navbar justify-content-evenly bg-info fixed-bottom" style="width: 100%;">
-            <nav class="navbar bg-light">
+            <nav class="navbar bg-light" id="searchfooter">
                 <form class="container-fluid">
                     <div class="input-group">
                         <span class="btn btn-outline-success" id="basic-addon1">ICON</span>
