--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
                             aria-expanded="false">
-                            Dropdown
+                            Menu
                         </a>
                         <ul class="dropdown-menu dropdown-menu-dark">
                             <li><a class="dropdown-item" href="#">Action</a></li>
@@ -60,24 +60,12 @@
             <a class="btn btn-primary btn-lg" href="#" role="button">Login</a>
             <a class="btn btn- btn-sm" href="#" role="button">skip</a>
 
-        <footer class="navbar justify-content-evenly bg-info fixed-bottom" style="width: 100%;">
-            <nav class="navbar bg-light">
-                <form class="container-fluid">
-                    <div class="input-group">
-                        <span class="btn btn-outline-success" id="basic-addon1">ICON</span>
-                        <input type="text" class="form-control" placeholder="Search" aria-label="Search"
-                            aria-describedby="basic-addon1">
-                    </div>
-                </form>
-            </nav>
-        </footer>
+            <!---------------------------------------------->
+            <!-- Your own JavaScript functions go here    -->
+            <!---------------------------------------------->
 
-        <!---------------------------------------------->
-        <!-- Your own JavaScript functions go here    -->
-        <!---------------------------------------------->
-
-        <!-- Link to scripts of your own -->
-        <!-- <script src="./scripts/script.js"></script> -->
+            <!-- Link to scripts of your own -->
+            <!-- <script src="./scripts/script.js"></script> -->
 
 </body>
 
