--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <nav class="navbar bg-success" id="searchfooter">
                 <form class="container-fluid">
                     <div class="input-group">
-                        <span class="btn btn- btn-sm bg-info" href="#" id="basic-addon1">
+                        <span class="btn btn- btn-sm bg-white" href="#" id="basic-addon1">
                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search"
                                 viewBox="0 0 16 16">
                                 <path
