update welcome banner

--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
         <h1 class="display-4">Welome to SlipSafe</h1>
         <p class="lead">Our aim is to get you from A to B, as safe as can be.</p>
         <hr class="my-4">
-        <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
+        <p id="inspire-message">Your input keeps the people around you safe. Report an icy sidewalk today!</p>
         <p class="lead">
-            <a class="btn btn-primary btn-lg" href="#" role="button">Login</a>
+            <a class="btn btn-primary btn-lg" id="loginbutton" href="#" role="button">Login</a>
             <a class="btn btn- btn-sm" href="#" role="button">skip</a>
 
         <footer class="navbar justify-content-evenly bg-success fixed-bottom" style="width: 100%;">
