Create login and main pag

--- a/main.html
+++ b/main.html
@@ -48,13 +48,8 @@
     
 
     <div class="jumbotron">
-        <h1 class="display-4">Welome to SlipSafe</h1>
-        <p class="lead">Our aim is to get you from A to B, as safe as can be.</p>
-        <hr class="my-4">
-        <p id="inspire-message">Your input keeps the people around you safe. Report an icy sidewalk today!</p>
-        <p class="lead">
-            <a class="btn btn-primary btn-lg" id="loginbutton" href="./login.html" role="button">Login</a>
-            <a class="btn btn- btn-sm" href="#" role="button">skip</a>
+        <h1 class="display-4">This is the main page!</h1>
+        
 
     <footer id="footerPlaceholder"></footer>
 
