--- a/login.html
+++ b/login.html
@@ -46,23 +46,20 @@
     <!-- Navbar -->
     <nav id="navbarPlaceholder"></nav>
     
-
-    <div class="jumbotron">
-        <h1 class="display-4">Welome to SlipSafe</h1>
-        <p class="lead">Our aim is to get you from A to B, as safe as can be.</p>
-        <hr class="my-4">
-        <p id="inspire-message">Your input keeps the people around you safe. Report an icy sidewalk today!</p>
-        <p class="lead">
-            <a class="btn btn-primary btn-lg" id="loginbutton" href="./login.html" role="button">Login</a>
-            <a class="btn btn- btn-sm" href="#" role="button">skip</a>
-
+        <div class="container">
+            <h1>Let's Login!</h1>
+        </div>
+        <div id="firebaseui-auth-container"></div>
+        <div id="loader">Loading...</div>
+   
     <footer id="footerPlaceholder"></footer>
 
 
         <!-- Link to scripts of your own -->
         <!-- <script src="./scripts/script.js"></script> -->
+        <script src="./scripts/firebaseAPI_TEAMDTC11.js"></script>
+    <script src="./scripts/authentication.js"></script>
     <script src="./scripts/skeleton.js"></script>
-    <script src="./scripts/firebaseAPI_TEAMDTC11.js"></script>
 
 </body>
 
