Fix some typos and add menu contents

--- a/text/nav.html
+++ b/text/nav.html
@@ -13,9 +13,14 @@
                         Menu
                     </a>
                     <ul class="dropdown-menu dropdown-menu-dark">
-                        <li><a class="dropdown-item" href="#">Action</a></li>
-                        <li><a class="dropdown-item" href="#">Another action</a></li>
-                        <li><a class="dropdown-item" href="#">Something else here</a></li>
+                        <li><a class="dropdown-item" href="#">Profile</a></li>
+                        <li><a class="dropdown-item" href="#">Weather</a></li>
+                        <li><a class="dropdown-item" href="#">Saved</a></li>
+                        <li><a class="dropdown-item" href="#">Previous</a></li>
+                        <li><a class="dropdown-item" href="#">Nearby</a></li>
+                        <li><a class="dropdown-item" href="#">Friends</a></li>
+                        <li><a class="dropdown-item" href="#">Nearby</a></li>
+
                     </ul>
                 </li>
             </ul>
