--- a/text/submission.html
+++ b/text/submission.html
@@ -25,7 +25,7 @@
                 <div class="modal-header">
                     <div class="title-centered">
                         <h1 class="modal-title fs-5" id="exampleModalLabel">Are you reporting a safe sidewalk or a
-                            harzard?
+                            harzad?
                         </h1>
                     </div>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
@@ -36,7 +36,7 @@
                             <h1>Safe</h1>
                         </button>
                         <button type="button" class="popupbtn btn btn-light">
-                            <h1>Harzard</h1>
+                            <h1>Harzad</h1>
                         </button>
                     </div>
                     <form>
