Move files into folder

--- a/text/nav.html
+++ b/text/nav.html
@@ -19,7 +19,7 @@
                         <li><a class="dropdown-item" href="#">Previous</a></li>
                         <li><a class="dropdown-item" href="#">Nearby</a></li>
                         <li><a class="dropdown-item" href="#">Friends</a></li>
-                        <li><a class="dropdown-item" href="#">Nearby</a></li>
+                        <li><a class="dropdown-item" href="#">Log Out</a></li>
 
                     </ul>
                 </li>
