--- a/text/submission.html
+++ b/text/submission.html
@@ -10,12 +10,12 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Other libraries go here -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <link rel="stylesheet" href="./styles/submission.css">
+    <link rel="stylesheet" href="/styles/submission.css">
     <title>Document</title>
 </head>
 
 <body>
-    <nav id="navbarPlaceholder"></nav>
+    <!-- <nav id="navbarPlaceholder"></nav> -->
 
 
 
@@ -61,12 +61,12 @@
     <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal"
         data-bs-whatever="@getbootstrap">Button trigger for modal</button>
 
-    <footer id="footerPlaceholder"></footer>
+    <!-- <footer id="footerPlaceholder"></footer>
 
 
 
 
-    <script src="./scripts/skeleton.js"></script>
+    <script src="./scripts/skeleton.js"></script> -->
 
 </body>
 
