--- a/text/submitted.html
+++ b/text/submitted.html
@@ -12,13 +12,13 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Other libraries go here -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <link rel="stylesheet" href="./styles/submitted.css">
+    <link rel="stylesheet" href="/styles/submitted.css">
     <title>Document</title>
 
 </head>
 
 <body>
-    <nav id="navbarPlaceholder"></nav>
+    <!-- <nav id="navbarPlaceholder"></nav> -->
 
     <!-- This is the alert message after submission -->
     <svg xmlns="http://www.w3.org/2000/svg" style="display: none;">
@@ -45,9 +45,9 @@
     </div>
 
 
-    <footer id="footerPlaceholder"></footer>
+    <!-- <footer id="footerPlaceholder"></footer>
 
-    <script src="./scripts/skeleton.js"></script>
+    <script src="./scripts/skeleton.js"></script> -->
 
 </body>
 
