--- a/text/nav.html
+++ b/text/nav.html
@@ -7,16 +7,13 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavDarkDropdown">
             <ul class="navbar-nav">
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                        aria-expanded="false">
-                        Menu
-                    </a>
-                    <ul class="dropdown-menu dropdown-menu-dark">
-
-
-                    </ul>
-                </li>
+                        <li><a class="dropdown-item" href="#">Profile</a></li>
+                        <li><a class="dropdown-item" href="#">Weather</a></li>
+                        <li><a class="dropdown-item" href="#">Saved</a></li>
+                        <li><a class="dropdown-item" href="#">Previous</a></li>
+                        <li><a class="dropdown-item" href="#">Nearby</a></li>
+                        <li><a class="dropdown-item" href="#">Friends</a></li>
+                        <li><a class="dropdown-item" href="#">Log Out</a></li>
             </ul>
         </div>
     </div>
