--- a/text/map.html
+++ b/text/map.html
@@ -16,14 +16,25 @@
     <script src="https://unpkg.com/leaflet@1.9.3/dist/leaflet.js"
         integrity="sha256-WBkoXOwTeyKclOHuWtc+i2uENFpDZ9YPdf5Hf+D7ewM=" crossorigin=""></script>
     <!-- openstreet/leaflet -->
+    <!-- <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script> -->
+    <!-- <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script> -->
+    <!-- <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script> -->
+    <!-- <script src="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.js"></script> -->
+    <!-- <link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.css" /> -->
 </head>
 
 <body>
     <main>
         <!-- MAPBOX -->
-        <div id='map' style='width: 100%; height: 882px;'></div>
-        <!-- MAPBOX -->
+        <div id='map' style='width: 100%; height: 882px;'>
+            <!-- add button diplayed above map layer -->
+            <button id="home" style="position: absolute; bottom: 10px; left: 10px; z-index: 1000;">HOMEHOMEHOME</button>
 
+
+
+        </div>
+        <!-- MAPBOX -->
+        <button id="home" style="position: fixed;"> HOMEHOMEHOME</button>
     </main>
     <script src="/scripts/map.js"></script>
 </body>
