add custom images to map icons

--- a/text/map.html
+++ b/text/map.html
@@ -28,7 +28,7 @@
         <!-- MAPBOX -->
         <div id='map' style='width: 100%; height: 882px;'>
             <!-- add button diplayed above map layer -->
-            <button id="home" style="position: absolute; bottom: 10px; left: 10px; z-index: 1000;">HOMEHOMEHOME</button>
+            <!-- <button id="home" style="position: absolute; bottom: 10px; left: 10px; z-index: 1000;">HOMEHOMEHOME</button> -->
 
 
 
