Create footer before login and after login Footer after login has a button to add a report Changed footer placeholder on index, main, login

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <a class="btn btn-primary btn-lg" id="loginbutton" href="./login.html" role="button">Login</a>
             <a class="btn btn- btn-sm" href="#" role="button">skip</a>
 
-    <footer id="footerPlaceholder"></footer>
+    <footer id="footerBeforeLoginPlaceholder"></footer>
 
 
         <!-- Link to scripts of your own -->
