--- a/login.html
+++ b/login.html
@@ -52,7 +52,7 @@
         <div id="firebaseui-auth-container"></div>
         <div id="loader">Loading...</div>
    
-    <footer id="footerPlaceholder"></footer>
+    <footer id="footerBeforeLoginPlaceholder"></footer>
 
 
         <!-- Link to scripts of your own -->
