--- a/main.html
+++ b/main.html
@@ -55,10 +55,15 @@
 
     <div class="jumbotron">
 
-        <div id="mapPlaceholder"></div>
+        <div id="mapPlaceholder">
+            <button id="home" style="position: absolute; bottom: 10px; left: 10px; z-index: 1000;"> HOMEHOMEHOME</button>
+        </div>
 
 
-        <footer id="footerPlaceholder"></footer>
+        <footer id="footerAfterLoginPlaceholder">
+            
+
+        </footer>
 
 
         <!-- Link to scripts of your own -->
