Move report modal to main, toggle on navbar

--- a/text/nav.html
+++ b/text/nav.html
@@ -7,13 +7,16 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavDarkDropdown">
             <ul class="navbar-nav">
-                        <li><a class="dropdown-item" href="#">Profile</a></li>
-                        <li><a class="dropdown-item" href="#">Weather</a></li>
-                        <li><a class="dropdown-item" href="#">Saved</a></li>
-                        <li><a class="dropdown-item" href="#">Previous</a></li>
-                        <li><a class="dropdown-item" href="#">Nearby</a></li>
-                        <li><a class="dropdown-item" href="#">Friends</a></li>
-                        <li><a class="dropdown-item" href="#">Log Out</a></li>
+                <li><a class="dropdown-item" href="#">Profile</a></li>
+                <li><a class="dropdown-item" href="#">Weather</a></li>
+                <li><a class="dropdown-item" href="#">Saved</a></li>
+                <li><a class="dropdown-item" href="#">Previous</a></li>
+                <li><a class="dropdown-item" href="#">Nearby</a></li>
+                <!-- below is modified temporary as toggle for submitting report -->
+                <li><a class="dropdown-item" href="#" type="button" class="btn btn-primary" data-bs-toggle="modal"
+                        data-bs-target="#exampleModal" data-bs-whatever="@getbootstrap">Report</a></li>
+                <!-- end of toggle -->
+                <li><a class="dropdown-item" href="#">Log Out</a></li>
             </ul>
         </div>
     </div>
