--- a/text/footer_after_login.html
+++ b/text/footer_after_login.html
@@ -14,5 +14,6 @@
                 </div>
             </form>
         </nav>
-        <button id="home" style="position: absolute; bottom: 10px; right: 10px; z-index: 1000;"> Report</button>
+        <button id="add_report" style="position: absolute; bottom: 10px; right: 10px; z-index: 1000;"> Report</button>
 </footer>
+
