--- a/text/nav.html
+++ b/text/nav.html
@@ -48,15 +48,15 @@
 
                     </div>
                     <div class="mb-3">
-                        <label for="message-text" class="col-form-label" id="text_input">Text Description</label>
-                        <textarea class="form-control" id="message-text"></textarea>
+                        <label for="message-text" class="col-form-label">Text Description</label>
+                        <textarea class="form-control" id="text_input"></textarea>
                     </div>
                 </form>
             </div>
             <div class="modal-footer">
-                <button type="button" class="submissionbtn btn btn-secondary btn-lg "
+                <button type="button" class="submissionbtn btn btn-secondary btn-lg" data-bs-dismiss="modal"
                     data-bs-dismiss="modal">Cancel</button>
-                <button type="button" class="submissionbtn btn btn-primary btn-lg" 
+                <button type="button" class="submissionbtn btn btn-primary btn-lg" data-bs-dismiss="modal"
                     id="submitbtn">Submit</button>
             </div>
         </div>
