--- a/profile.html
+++ b/profile.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,7 +12,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
         </script>
-    
+
     <!-------------------------------------------------------->
     <!-- Firebase 8 Library related CSS, JS, JQuery go here -->
     <!-------------------------------------------------------->
@@ -31,63 +32,62 @@
         integrity="sha256-WBkoXOwTeyKclOHuWtc+i2uENFpDZ9YPdf5Hf+D7ewM=" crossorigin=""></script>
 
 </head>
+
 <body>
     <nav id="navbarPlaceholder"></nav>
 
     <form class="row g-3">
-        <fieldset class="mb-3" id="personalInfoFields" disabled>
-        <div class="col-md-6">
-            <label for="inputEmail4" class="form-label">Email</label>
-            <input type="email" class="form-control" id="emailInput" disabled>
-        </div>
-        <div class="col-md-6">
-            <label for="inputPassword4" class="form-label">Name</label>
-            <input type="text" class="form-control" id="nameInput">
-        </div>
-        <div class="col-12">
-            <label for="inputAddress" class="form-label">Address</label>
-            <input type="text" class="form-control" id="addressInput" placeholder="1234 Main St">
-        </div>
-        <div class="col-12">
-            <label for="inputAddress2" class="form-label">Address 2</label>
-            <input type="text" class="form-control" id="address2Input" placeholder="Apartment, studio, or floor">
-        </div>
-        <div class="col-md-6">
-            <label for="inputCity" class="form-label">City</label>
-            <input type="text" class="form-control" id="cityInput">
-        </div>
-        <div class="col-md-4">
-            <label for="inputState" class="form-label">Province/Territory</label>
-            <select id="inputState" class="form-select">
-                <option selected id="provinceInput"></option>
-                <option>Alberta</option>
-                <option>British Columbia</option>
-                <option>Manitoba</option>
-                <option>New Brunswick</option>
-                <option>Newfoundland and Labrador</option>
-                <option>Northwest Territories</option>
-                <option>Nova Scotia</option>
-                <option>Nunavut</option>
-                <option>Ontario</option>
-                <option>Prince Edward Island</option>
-                <option>Ontario</option>
-                <option>Quebec</option>
-                <option>Saskatchewan</option>
-                <option>Yukon</option>
-            </select>
-        </div>
-        <div class="col-md-2">
-            <label for="inputZip" class="form-label">Postal Code</label>
-            <input type="text" class="form-control" id="postalInput">
-        </div>
+        <fieldset class="mb-3" id="personalInfoField" disabled>
+            <div class="col-md-6">
+                <label for="inputEmail4" class="form-label">Email</label>
+                <input type="email" class="form-control" id="emailInput" disabled>
+            </div>
+            <div class="col-md-6">
+                <label for="inputPassword4" class="form-label">Name</label>
+                <input type="text" class="form-control" id="nameInput">
+            </div>
+            <div class="col-12">
+                <label for="inputAddress" class="form-label">Address</label>
+                <input type="text" class="form-control" id="addressInput" placeholder="1234 Main St">
+            </div>
+            <div class="col-12">
+                <label for="inputAddress2" class="form-label">Address 2</label>
+                <input type="text" class="form-control" id="address2Input" placeholder="Apartment, studio, or floor">
+            </div>
+            <div class="col-md-6">
+                <label for="inputCity" class="form-label">City</label>
+                <input type="text" class="form-control" id="cityInput">
+            </div>
+            <div class="col-md-4">
+                <label for="inputProvince" class="form-label">Province/Territory</label>
+                <select id="inputProvince" class="form-select">
+                    <option selected id="provinceInput"></option>
+                    <option>Alberta</option>
+                    <option>British Columbia</option>
+                    <option>Manitoba</option>
+                    <option>New Brunswick</option>
+                    <option>Newfoundland and Labrador</option>
+                    <option>Northwest Territories</option>
+                    <option>Nova Scotia</option>
+                    <option>Nunavut</option>
+                    <option>Ontario</option>
+                    <option>Prince Edward Island</option>
+                    <option>Ontario</option>
+                    <option>Quebec</option>
+                    <option>Saskatchewan</option>
+                    <option>Yukon</option>
+                </select>
+            </div>
+            <div class="col-md-2">
+                <label for="inputZip" class="form-label">Postal Code</label>
+                <input type="text" class="form-control" id="postalInput">
+            </div>
         </fieldset>
-        <div class="col-12">
-            <button id="edit_button" type="edit" onclick="editUserInfo()" class="btn  btn-primary">Edit</button>
-            <button id="submit_button" onclick="saveUserInfo()" type="submit" class="btn btn-primary">Submit</button>
-        </div>
-        
-
     </form>
+    <div class="col-12">
+        <button id="edit_button" type="edit" onclick="editUserInfo()" class="btn  btn-primary">Edit</button>
+        <button id="submit_button" onclick="saveUserInfo()" type="submit" class="btn btn-primary">Submit</button>
+    </div>
 
 
     <footer id="footerAfterLoginPlaceholder"></footer>
