--- a/profile.html
+++ b/profile.html
@@ -60,8 +60,8 @@
             </div>
             <div class="col-md-4">
                 <label for="inputProvince" class="form-label">Province/Territory</label>
-                <select id="inputProvince" class="form-select">
-                    <option selected id="provinceInput"></option>
+                <select id="provinceInput" class="form-select">
+                    <option selected></option>
                     <option>Alberta</option>
                     <option>British Columbia</option>
                     <option>Manitoba</option>
