--- a/text/nav.html
+++ b/text/nav.html
@@ -1,3 +1,6 @@
+<link rel="stylesheet" href="/styles/submission.css">
+<script src="/scripts/submission.js"></script>
+
 <nav class="navbar navbar-expand-lg navbar-dark bg-success">
     <div class="container-fluid">
         <a class="navbar-brand" href="#">SlipSafe (logo)</a>
@@ -24,7 +27,7 @@
 
 <!-- Below is the modal code -->
 <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-dialog modal-dialog-centered center-modal">
         <div class="modal-content">
             <div class="modal-header">
                 <div class="title-centered">
@@ -32,20 +35,14 @@
                         harzad?
                     </h1>
                 </div>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
-                <div class="harzard-buttons">
-                    <button type="button" class="popupbtn btn btn-light">
-                        <h1>Safe</h1>
-                    </button>
-                    <button type="button" class="popupbtn btn btn-light">
-                        <h1>Harzad</h1>
-                    </button>
-                </div>
+                <img id="frame" src="" class="img-fluid" />
                 <form>
                     <div class="mb-3">
-
+                        <label for="formFile" class="form-label">Upload picture of hazard.</label>
+                        <input class="form-control" type="file" id="formFile" onchange="preview()"
+                            onclick="clearImage()">
                     </div>
                     <div class="mb-3">
                         <label for="message-text" class="col-form-label">Text Description</label>
@@ -55,7 +52,7 @@
             </div>
             <div class="modal-footer">
                 <button type="button" class="submissionbtn btn btn-secondary btn-lg" data-bs-dismiss="modal"
-                    data-bs-dismiss="modal">Cancel</button>
+                    data-bs-dismiss="modal" onclick="empty_all()">Cancel</button>
                 <button type="button" class="submissionbtn btn btn-primary btn-lg" data-bs-dismiss="modal"
                     id="submitbtn">Submit</button>
             </div>
@@ -63,6 +60,3 @@
     </div>
 </div>
 <!-- Above is modal -->
-
-
-<script src="/scripts/submission.js"></script>
