--- a/text/nav.html
+++ b/text/nav.html
@@ -1,6 +1,8 @@
+
 <nav class="navbar navbar-expand-lg navbar-dark bg-success">
     <div class="container-fluid">
         <a class="navbar-brand" href="#">SlipSafe (logo)</a>
+        <a class="text-decoration-none text-white text-center bg-secondary rounded-circle" style="width: 30px; height: 30px;" id="logged_in" href="../profile.html"></a>       
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDarkDropdown"
             aria-controls="navbarNavDarkDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -21,6 +23,7 @@
         </div>
     </div>
 </nav>
+
 
 <!-- Below is the modal code -->
 <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
@@ -66,3 +69,4 @@
 
 
 <script src="/scripts/submission.js"></script>
+<script src="/scripts/logged_in.js"></script>
