--- a/text/nav.html
+++ b/text/nav.html
@@ -3,7 +3,7 @@
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-success">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#">SlipSafe (logo)</a>
+        <a class="navbar-brand" href="../main.html">SlipSafe (logo)</a>
         <a class="text-decoration-none text-white text-center bg-secondary rounded-circle" style="width: 30px; height: 30px;" id="logged_in" href="../profile.html"></a>       
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDarkDropdown"
             aria-controls="navbarNavDarkDropdown" aria-expanded="false" aria-label="Toggle navigation">
