empty after submit button

--- a/text/nav.html
+++ b/text/nav.html
@@ -56,7 +56,7 @@
                 <button type="button" class="submissionbtn btn btn-secondary btn-lg" data-bs-dismiss="modal"
                     data-bs-dismiss="modal" onclick="empty_all()">Cancel</button>
                 <button type="button" class="submissionbtn btn btn-primary btn-lg" data-bs-dismiss="modal"
-                    id="submitbtn">Submit</button>
+                    id="submitbtn" onclick="empty_all()">Submit</button>
             </div>
         </div>
     </div>
