--- a/text/nav.html
+++ b/text/nav.html
@@ -4,7 +4,8 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-success">
     <div class="container-fluid">
         <a class="navbar-brand" href="../main.html">SlipSafe (logo)</a>
-        <a class="text-decoration-none text-white text-center bg-secondary rounded-circle" style="width: 30px; height: 30px;" id="logged_in" href="../profile.html"></a>       
+        <a class="text-decoration-none text-white text-center bg-secondary rounded-circle"
+            style="width: 30px; height: 30px;" id="logged_in" href="../profile.html"></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDarkDropdown"
             aria-controls="navbarNavDarkDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -18,7 +19,8 @@
                 <li><a class="dropdown-item" href="#">Nearby</a></li>
                 <!-- below is modified temporary as toggle for submitting report -->
                 <li><a class="dropdown-item" href="#" type="button" class="btn btn-primary" data-bs-toggle="modal"
-                        data-bs-target="#exampleModal" data-bs-whatever="@getbootstrap">Report</a></li>
+                        data-bs-target="#exampleModal" data-bs-whatever="@getbootstrap" onclick="empty_all()">Report</a>
+                </li>
                 <!-- end of toggle -->
                 <li><a class="dropdown-item" href="#">Log Out</a></li>
             </ul>
@@ -56,7 +58,7 @@
                 <button type="button" class="submissionbtn btn btn-secondary btn-lg" data-bs-dismiss="modal"
                     data-bs-dismiss="modal" onclick="empty_all()">Cancel</button>
                 <button type="button" class="submissionbtn btn btn-primary btn-lg" data-bs-dismiss="modal"
-                    id="submitbtn" onclick="empty_all()">Submit</button>
+                    id="submitbtn">Submit</button>
             </div>
         </div>
     </div>
