--- a/text/nav.html
+++ b/text/nav.html
@@ -1,5 +1,6 @@
 <link rel="stylesheet" href="/styles/submission.css">
 <script src="/scripts/submission.js"></script>
+<script src="/scripts/map.js"></script>
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-success">
     <div class="container-fluid">
