link footer to map.js

--- a/text/footer_after_login.html
+++ b/text/footer_after_login.html
@@ -1,4 +1,7 @@
 <link rel="stylesheet" href="../styles/logged_in.css">
+<!-- import map.js-->
+<script src="../scripts/map.js"></script>
+
 
 
 <nav class="navbar" id="searchfooter">
