--- a/main.html
+++ b/main.html
@@ -70,6 +70,7 @@
         <!-- <script src="./scripts/script.js"></script> -->
         <script src="./scripts/skeleton.js"></script>
         <script src="./scripts/firebaseAPI_TEAMDTC11.js"></script>
+        <script src="/scripts/map.js"></script>
         
 
 
