--- a/text/footer_after_login.html
+++ b/text/footer_after_login.html
@@ -1,6 +1,6 @@
 <link rel="stylesheet" href="../styles/logged_in.css">
 <!-- import map.js-->
-<script src="../scripts/map.js"></script>
+<script src="./scripts/map.js"></script>
 
 
 
@@ -24,7 +24,7 @@
                         d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z" />
                 </svg>
                 <input style="display: inline-block; width: 200px; height: 32px;" type="text" class="form-control"
-                placeholder="Search" aria-label="Search" aria-describedby="basic-addon1">
+                    placeholder="Search" aria-label="Search" aria-describedby="basic-addon1">
             </span>
         </div>
 
@@ -36,3 +36,4 @@
         </div>
     </form>
 </nav>
+<script src="./scripts/footer.js"></script>
