--- a/text/footer_after_login.html
+++ b/text/footer_after_login.html
@@ -47,8 +47,7 @@
         <div class="modal-content">
             <div class="modal-header">
                 <div class="title-centered">
-                    <h1 class="modal-title fs-5" id="exampleModalLabel">Are you reporting a safe sidewalk or a
-                        harzad?
+                    <h1 class="modal-title fs-5" id="exampleModalLabel">Are you reporting a hazardous sidewalk?
                     </h1>
                 </div>
             </div>
