renaming files and changing link

--- a/text/footer_after_login.html
+++ b/text/footer_after_login.html
@@ -10,12 +10,12 @@
     <form class="d-flex navbar justify-content-between container-fluid fixed-bottom" style="padding-bottom: 25px;">
         <div>
             <button id="locate_home" type="button" class="popupbtn btn btn-light"><img
-                    src="../images/—Pngtree—house location icon_4985554.png" alt=""
+                    src="../images/house_location_icon.png" alt=""
                     style="height:100%; filter: invert(100%) hue-rotate(120deg);"></button>
         </div>
         <div>
             <button id="locate_me" type="button" class="popupbtn btn btn-light"><img
-                    src="../images/—Pngtree—people location pin icon_5047014.png" alt=""
+                    src="../images/location_pin_icon.png" alt=""
                     style="height:100%; filter: invert(100%) hue-rotate(120deg);"></button>
         </div>
         <div id="search_bar" class="input-group d-none d-md-inline-block" style="width: fit-content;">
